--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.1.1
-Flask-Login==0.6.3
-requests==2.31.0
-Werkzeug==3.0.1 #password hashing 
+Flask>=2.0
+Flask-SQLAlchemy>=2.5
+Flask-Login>=0.5
+Flask-WTF>=1.0.0
+requests>=2.25
+Werkzeug>=2.0
+SQLAlchemy>=1.4
+
